# ChangeLog for dev-python/feedgenerator
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/feedgenerator/ChangeLog,v 1.2 2013/01/21 14:11:24 idella4 Exp $

*feedgenerator-1.5 (22 Jan 2013)

  22 Jan 2013; Ian Delaney <idella4@gentoo.org> +feedgenerator-1.5.ebuild:
  bump; test phase added

*feedgenerator-1.2.1 (19 Jul 2012)

  19 Jul 2012; Dirkjan Ochtman <djc@gentoo.org> +feedgenerator-1.2.1.ebuild,
  +metadata.xml:
  Initial version (for pelican, bug 379671).