@@ -4,13 +4,13 @@ Hash: SHA256
 DIST feedgenerator-1.2.1.tar.gz 5555 SHA256 e099309847086ac6092ac498cf0bcc0abf9cdaa037fc3a6d245a03429cbb78e7 SHA512 990bfaa709ce6e78ba338ad0689f263a582a81dc981b3bc4c0334804d5330bac1e0fde2b31d81aca03dbf1b8487ab4a07cb96cca36ca31046c3c5e8d7d282e76 WHIRLPOOL ccf261e72ea725036cf87eee887f4ae489c107b62c4b7854fc1607c92bac67c94122c479611b010e41fc0d3860e98afcc5c70dec83a85e625cdc4fbb5bacbbe1
 DIST feedgenerator-1.5.tar.gz 909738 SHA256 7bc7dae02d5ca37f305311ca1696f2945625b08db70056b35f18727894bc5a3e SHA512 53a4f572135b238d040b245de8d5cb0095277f4c199a5b22cf40d22641f5c3eed7a8bc3a00072bbd71b3914e66a0c6eb842700ed67a737d2e4aeb2b43439c7c5 WHIRLPOOL 8430c331c203a8a89bde4c6c0792428e80faaf0ae2cb1114e7ba67e05a055853eda65efa99ebde8f34c53f6c1308b428b3506723dec5bdb2949420bd22f20368
 EBUILD feedgenerator-1.2.1.ebuild 574 SHA256 c4d195289719731ac80b7e93803c30e25946900fd7c3b95890c77b57ab9b53de SHA512 abe2069e3b47ab3849db7e4393adfa728d1badea5d292a79fa5e4eacec7b5c696d74925ee57b7eb01249dac14e31685681e0ba3bb95432841f81ca892be46425 WHIRLPOOL 26ada710b09ebf24c69702d173b923c6ab240fe23dd9e6f8afa5647b2da5ce792dcb3852a3ba352147547bf83c69376c278455df1b75a6b3b821c1fcb576421f
-EBUILD feedgenerator-1.5.ebuild 847 SHA256 ead0c8acee61f7595b23b88a159378fffe9ee1034f83f17f490e86c22905e554 SHA512 e9e8fb045a578aae93243f21ccf42d07329a84bfcd413514e70bb571694b7241958bb4d91738f28cced7c10c83a66488c74a5f76aad576d135e00703f75aea19 WHIRLPOOL 4adc7366557a3545709225205eff5e0c0c1c8d9f3ace84fe713018d90897716c2e395d116a5ed2621bbfd8d5e5152d4ff68ed9d4418e88a3ba536b7ed287b080
-MISC ChangeLog 532 SHA256 ab8376d163aa6d31baad7507a03963e5ee059f2a139c9ccd7797a6525d589341 SHA512 5c300c0431d91ebfe90dc7d03fdcb130b27775f98342ca70a71cbc6e0eefc0ebff6c3a8a5be92b50aaa9bc49b3233af5505184e662b7323d9618fb4d4e352ba0 WHIRLPOOL e898ccf46bd68753224b6b1c31f62b617d5fef94a92fa612766aab5bf8f21373b6cbd5101e01d36f95588a386be6e6137838440572b35d0659b0b9d694143e12
+EBUILD feedgenerator-1.5.ebuild 851 SHA256 4adf52dff4680efa5cfbbb9d11fb24fb247a432a2eb5ac69103ff0f1d94f448f SHA512 a918e7871256b3db0c9eafc28dc393da3c79a7888b68dee1030c5a9b8fcce6c2a0a307fc8e117472f5b2c8e576922672aae63f37e52ad954d6a3a256abafda86 WHIRLPOOL 27f85388559fefef30be0d6a1043805a99ff27325d07f76317e3eb5caa8452a591bf817de65e5a609cbb07c12d0de24f4f390bf0e0ce975c7fcfb880594cab52
+MISC ChangeLog 627 SHA256 4dc3312d5aa3e3fd9b3b6af7d5d7b32cb93aa7b6f9e71b3161574299fc272caa SHA512 17334339f93e983569096e9493dd9bec8de91e2cb8cf8d745ae709dba95f12bbb0f4ef56904ef5908309081d7a34749f32ae4feecd5ea63bc82fc207c2c7b815 WHIRLPOOL 45619399c853c23371a916ff5301d9d891bc22e999392b2eb7a56329b703e52d6ba3af34795145d8a128982b42a0d059b9fa7561781857486bead0914826b1b7
 MISC metadata.xml 236 SHA256 0f0e85b9696331c0858c829935f64b0bfc76f099dad75201e1035635b61587d2 SHA512 027bca9caf00e4f02639a1e7c4f5de3b62f3f87bffcad60d5b403ec59ad4889e9847326fe346b6e7eb8ac9c8ab816707ac670a21c57b1e2ceb82d25e14da4dd6 WHIRLPOOL 70a33a85923cc165d25afaac097fb973c84f16682aed37a1cb6be884d4ce07b43bfebe6456de94865c1f37f472b38dbfa86c40bcf590bc72b564bb57ca92d90a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlD+LRgACgkQso7CE7gHKw2EmQCgxC3/QSiqUVFHCg3V2IcKtOQi
-wbgAoKxp25yn1J7TTi4jYIoJZT7NMjiF
-=vDDM
+iEYEAREIAAYFAlGllwAACgkQso7CE7gHKw3elQCfc1HrewUOOr4AxugMU7XYDJXv
+rQsAoOLnIj8I4J4m4GwhjzF2FxFK6nXf
+=CsMZ
 -----END PGP SIGNATURE-----
