@@ -1,9 +1,9 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/feedgenerator/feedgenerator-1.5.ebuild,v 1.1 2013/01/21 14:11:24 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/feedgenerator/feedgenerator-1.5.ebuild,v 1.2 2013/05/29 05:49:36 idella4 Exp $
 
 EAPI=5
-PYTHON_COMPAT=( python{2_6,2_7,3_2} pypy{1_9,2_0} )
+PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3} pypy{1_9,2_0} )
 inherit distutils-r1
 
 DESCRIPTION="Standalone version of django.utils.feedgenerator"
