@@ -1,9 +1,9 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/unidecode/unidecode-0.04.9-r1.ebuild,v 1.1 2013/04/08 13:41:18 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/unidecode/unidecode-0.04.9-r1.ebuild,v 1.2 2013/05/29 05:55:13 idella4 Exp $
 
 EAPI=5
-PYTHON_COMPAT=( python{2_6,2_7,3_1,3_2} pypy2_0 )
+PYTHON_COMPAT=( python{2_6,2_7,3_1,3_2,3_3} pypy2_0 )
 
 MY_PN=Unidecode
 MY_P=${MY_PN}-${PV}
