@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/feedgenerator
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/feedgenerator/ChangeLog,v 1.2 2013/01/21 14:11:24 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/feedgenerator/ChangeLog,v 1.3 2013/05/29 05:49:36 idella4 Exp $
+
+  29 May 2013; Ian Delaney <idella4@gentoo.org> feedgenerator-1.5.ebuild:
+  add py3.3 support
 
 *feedgenerator-1.5 (22 Jan 2013)
 
